# Tradepilot2

./: .gitignore  DECISIONS.md  Makefile  RUNBOOK.md  SPEC.md  pyproject.toml
adapters/: ctrader_stub.py  dxtrade_stub.py  ff_calendar.py  sqlite_store.py
adapters/mt5/: adapter.py
adapters/paper/: __init__.py  broker.py
api/: app.py  auth.py
backtest/: costs.py  engine.py  fills.py  montecarlo.py  reports.py
configs/: firm_profile.yaml  instruments.yaml  strategy.yaml
core/: compliance.py  config_schema.py  events.py  filters.py  reasons.py  risk.py  sizing.py  state_machine.py  strategy_ssr.py  timebase.py
ports/: calendar.py  clock.py  execution.py  marketdata.py  store.py
reports/: campaign_2018_2026.html  campaign_2018_2026.md  campaign_stress_slippage.html  campaign_stress_slippage.md
services/: alerts.py  bar_builder.py  config_loader.py  data_downloader.py  db_stats.py  feed_validation.py  flattener.py  live_gate.py  order_manager.py  runner.py  watchdog.py
tests/: conftest.py  fakes.py  test_alerts.py  test_api.py  test_backtest_engine.py  test_bar_builder.py  test_calendar.py  test_compliance.py  test_config_loader.py  test_config_schema.py  test_costs_fills.py  test_dukascopy.py  test_filters.py  test_firm_profile.py  test_flattener.py  test_instruments.py  test_live_gate.py  test_montecarlo.py  test_mt5_adapter.py  test_order_manager.py  test_paper_broker.py  test_paper_session.py  test_reports.py  test_risk.py  test_sizing.py  test_state_machine.py  test_store.py  test_strategy_ssr.py  test_timebase.py  test_watchdog.py
(+1 files in other folders)
